--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,8 @@
         </span>
     </div>
     <div class="header">
-        <h2>Cool Blog Name</h2>
+        <h2>Blogger App ValueBound
+        </h2>
     </div>
 </header>
 
