--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2,14 +2,14 @@
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: #235aa1;
     overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: #b0b6c7;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -24,7 +24,7 @@
 
 /* Add a color to the active/current link */
 .topnav a.active {
-    background-color: #4CAF50;
+    background-color: #eb5e0d;
     color: white;
     float: left;
 }
@@ -36,7 +36,7 @@
 body {
     font-family: Arial;
     padding: 0;
-    background: #f1f1f1;
+    background: #242222;
     width: 80%;
     margin: auto;
 
@@ -47,7 +47,7 @@ body {
     padding: 10px;
     font-size: 25px;
     text-align: center;
-    background: white;
+    background: rgb(183, 194, 226);
 }
 
 .container {
@@ -72,7 +72,7 @@ body {
 }
 
 .post {
-    background-color: white;
+    background-color: #ebebeb;
     padding: 20px;
     margin-top: 20px;
     text-align: center;
@@ -131,7 +131,7 @@ footer {
 }
 .alert-green {
     padding: 20px;
-    background-color: green;
+    background-color: rgb(175, 83, 30);
     color: white;
     margin: 15px auto;
     width: 80%;
@@ -148,7 +148,7 @@ a:hover {
 }
 
 .green-btn {
-    background-color: #4CAF50; /* Green */
+    background-color: #c55d18;
     border: none;
     color: white;
     padding: 15px 32px;
