--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
 <body>
 <footer th:fragment="footer">
     <div class="footer">
-        <p>2020 © Martynas Skaringa</p>
+        <p>2024 © Kushagra Jain</p>
     </div>
 </footer>
 </body>
