--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="post">
         <h2 th:text="${post.title}">Title</h2>
-        <h5 th:text="'Published on ' + ${#dates.format(post.creationDate, 'yyyy MMMM dd')} + ' by ' + ${post.user.username}">Creation date and by whom</h5>
+        <!-- <h5 th:text="'Published on ' + ${#dates.format(post.creationDate, 'yyyy MMMM dd')} + ' by ' + ${post.user.username}">Creation date and by whom</h5> -->
         <div class="img">Image</div>
         <p th:text="${post.body}">body text</p>
         <div class="align-right" sec:authorize="isAuthenticated()" th:if="${isOwner}">
