--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<header th:fragment="header">
+<header th:fragment="header" class="header-main">
     <div class="topnav">
         <a class="active" th:href="@{/}">Home</a>
         <span sec:authorize="hasRole('ROLE_USER')">
