--- a/src/main/resources/templates/postForm.html
+++ b/src/main/resources/templates/postForm.html
@@ -7,8 +7,8 @@
 
 <div th:replace="/fragments/header :: header"></div>
 
-<div class="container">
-    <form action="#"
+<div class="container-post">
+    <form class="form-log" action="#"
           th:action="@{'/createNewPost'}"
           th:object="${post}"
           method="post">
@@ -28,12 +28,13 @@
         <div class="float-left">
             <button class="green-btn" type="submit">Send</button>
         </div>
+        <div class="float-right" th:if="${post.id}">
+            <a th:href="@{'/deletePost/{id}'(id=${post.id})}">
+                <button class="green-btn red-btn" type="button">Delete Post</button>
+            </a>
+        </div>
     </form>
-    <div class="float-right" th:if="${post.id}">
-        <a th:href="@{'/deletePost/{id}'(id=${post.id})}">
-            <button class="green-btn red-btn" type="button">Delete Post</button>
-        </a>
-    </div>
+    
 </div>
 
 
