--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -9,26 +9,27 @@
 
 <div class = "container1"  th:class="align-center">
 
-    <form style="width: 30%; padding-top: 50px; padding-bottom: 50px; padding-left: 30px; padding-right: 30px; background-color: rgb(183, 194, 226); margin-top: 80px; margin-bottom: 150px; border-radius: 20px;" action="#"
+    <form style="width: 26%; padding-top: 50px; padding-bottom: 50px; padding-left: 30px; padding-right: 30px; background-color: rgb(183, 194, 226); margin-top: 80px; margin-bottom: 150px; border-radius: 20px;" action="#"
           th:action="@{/register}"
           th:object="${blogUser}"
           method="post">
         <div>
+            <h1><b>Sign Up</b></h1>
             <label>
                 <div class="alert-red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error
                 </div>
-                <input type="text" th:field="*{username}" placeholder="Username"/>
+                <input style="max-width: 390px;" type="text" th:field="*{username}" placeholder="Username"/>
             </label>
         </div>
         <div>
             <label>
                 <div class="alert-red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error
                 </div>
-                <input type="password" th:field="*{password}" placeholder="Password"/>
+                <input style="max-width: 390px;" type="password" th:field="*{password}" placeholder="Password"/>
             </label>
         </div>
         <div>
-            <button class="green-btn" type="submit">Register</button>
+            <button style="min-width: 390px; margin-top: 7px; border-radius: 2px;" class="green-btn" type="submit">Register</button>
         </div>
     </form>
 </div>
