success sign in pop up

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,12 +8,15 @@
 <div th:replace="/fragments/header :: header"></div>
 
 <div class="container-log">
-    
+
     <div th:if="${param.error}">
         <p class="alert-red">Invalid username and/or password</p>
     </div>
     <div th:if="${param.logout}">
-        <p class="alert-green"> You have been successfully logged out</p>
+        <p class="alert-green">You have been successfully logged out</p>
+    </div>
+    <div th:if="${param.signupSuccess}">
+        <p class="alert-green">Sign up successful, please login</p>
     </div>
 
     <form th:action="@{/login}" method="post">
@@ -24,12 +27,10 @@
         <div>
             <input type="password" name="password" id="password" placeholder="Password" required="true"/>
         </div>
-        <div class="align-center">
-        </div>
+        <div class="align-center"></div>
         <div>
             <input type="submit" class="green-btn blue-btn" value="Login"/>
         </div>
-
     </form>
 
 </div>
