--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -77,6 +77,17 @@ body {
     padding: 30px;
 }
 
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+
 .container-log {
     width: 30%;
     margin: auto;
