--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -8,10 +8,12 @@
 <div th:replace="/fragments/header :: header"></div>
 
 <div class="container">
+
+    <!-- Display Success Message -->
+    <div class="alert alert-success" th:if="${successMessage}" th:text="${successMessage}"></div>
+    
     <div class="post">
         <h2 th:text="${post.title}">Title</h2>
-        <!-- <h5 th:text="'Published on ' + ${#dates.format(post.creationDate, 'yyyy MMMM dd')} + ' by ' + ${post.user.username}">Creation date and by whom</h5> -->
-        <!-- <div class="img">Image</div> -->
         <p th:text="${post.body}">body text</p>
         <div class="align-right" sec:authorize="isAuthenticated()" th:if="${isOwner}">
             <a th:href="@{'/editPost/{id}'(id=${post.id})}">
@@ -19,13 +21,18 @@
             </a>
         </div>
     </div>
+    
     <div class="comments">
         <h2>Comments</h2>
+        <div th:if="${#lists.isEmpty(post.comments)}">
+            <p>No comments yet. Be the first to comment!</p>
+        </div>
         <div class="comment" th:each="comment : ${post.comments}">
             <h5 th:text="'Commented on ' + ${#dates.format(post.creationDate, 'yyyy-MM-dd')} + ' by ' + ${comment.user.username}">Comment date and by whom</h5>
             <p th:text="${comment.body}">Body</p>
         </div>
     </div>
+    
     <div class="align-center">
         <a th:href="@{'/comment/{id}'(id=${post.id})}">
             <button class="green-btn" type="button">Comment Post</button>
