--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -13,13 +13,18 @@
     <div class="alert alert-success" th:if="${successMessage}" th:text="${successMessage}"></div>
     
     <div class="post">
-        <h2 th:text="${post.title}">Title</h2>
-        <p th:text="${post.body}">body text</p>
-        <div class="align-right" sec:authorize="isAuthenticated()" th:if="${isOwner}">
-            <a th:href="@{'/editPost/{id}'(id=${post.id})}">
-                <button class="green-btn blue-btn" type="button">Edit</button>
-            </a>
+        <img th:src="${post.imageUrl}" alt="Post Image" style="width: 130px; height: 150px; margin-right: 15px;"/>
+        <div>
+            <h2 th:text="${post.title}">Title</h2>
+            <p th:text="${post.body}">body text</p>
+            <div class="edit-button" sec:authorize="isAuthenticated()" th:if="${isOwner}">
+                <a th:href="@{'/editPost/{id}'(id=${post.id})}">
+                    <button class="green-btn blue-btn" type="button">Edit</button>
+                </a>
+            </div>
+    
         </div>
+
     </div>
     
     <div class="comments">
