--- a/src/main/resources/templates/postForm.html
+++ b/src/main/resources/templates/postForm.html
@@ -11,7 +11,7 @@
     <form class="form-log" action="#"
           th:action="@{'/createNewPost'}"
           th:object="${post}"
-          method="post">
+          method="post" enctype="multipart/form-data">
         <h2>Write new blog post</h2>
         <div>
             <label>
@@ -24,6 +24,10 @@
                 <div class="alert-red" th:if="${#fields.hasErrors('body')}" th:errors="*{body}">Body Error</div>
                 <textarea th:field="*{body}" placeholder="Write something valuable"></textarea>
             </label>
+        </div>
+        <div>
+            <label for="image">Upload Image:</label>
+            <input type="file" name="image" id="image"/>
         </div>
         <div class="float-left">
             <button class="green-btn" type="submit">Send</button>
