--- a/src/main/resources/templates/fragments/posts.html
+++ b/src/main/resources/templates/fragments/posts.html
@@ -10,10 +10,21 @@
 
     <div class="posts_wrapper">
         <div class="post" th:each="post : ${posts}">
-            <h2><a th:href="@{'/post/' + ${post.id}}" th:text="${post.title}">Title</a></h2>
-            <!-- <h5 th:text="'Published on ' + ' by ' + ${post.user.username}">Creation date and by whom</h5> -->
+            <!-- <h2><a th:href="@{'/post/' + ${post.id}}" th:text="${post.title}">Title</a></h2>
             <p th:text="${post.body}">body text</p>
-            <br>
+            <br> -->
+            <img th:src="${post.imageUrl}" alt="Post Image" style="width: 130px; height: 150px; margin-right: 15px;"/>
+            <div>
+                <h2><a th:href="@{'/post/' + ${post.id}}" th:text="${post.title}">Title</a></h2>
+                <p th:text="${post.body}">body text</p>
+                <div class="edit-button" sec:authorize="isAuthenticated()" th:if="${isOwner}">
+                    <a th:href="@{'/editPost/{id}'(id=${post.id})}">
+                        <button class="green-btn blue-btn" type="button">Edit</button>
+                    </a>
+                </div>
+        
+            </div>
+    
         </div>
     </div>
 
