--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,11 +7,13 @@
 
 <div th:replace="/fragments/header :: header"></div>
 
-<div class="container">
+<!--<div class="container">-->
 
     <div th:replace="/fragments/posts :: posts(posts=${posts})"></div>
 
-</div>
+<!--</div>-->
+
+<footer  th:replace="/fragments/footer :: footer"></footer>
 
 
 </body>
