--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+
 </head>
 <body>
 <footer th:fragment="footer">
     <div class="footer">
-        <p>2024 © Kushagra Jain</p>
+        <p>2024 © Raunak</p>
     </div>
 </footer>
 </body>
