--- a/src/main/resources/templates/postForm.html
+++ b/src/main/resources/templates/postForm.html
@@ -1,48 +1,107 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en"-->
+<!--      xmlns:th="http://www.thymeleaf.org"-->
+<!--      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">-->
+<!--<head th:replace="/fragments/head :: head">-->
+<!--    <script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<div th:replace="/fragments/header :: header"></div>-->
+<!--<div class="content-wrapper">-->
+
+
+<!--    <div class="post-container">-->
+<!--        <form class="post-form" action="#"-->
+<!--              th:action="@{'/createNewPost'}"-->
+<!--              th:object="${post}"-->
+<!--              method="post" enctype="multipart/form-data">-->
+<!--            <h2>Create New Blog Post</h2>-->
+<!--            <div class="form-group">-->
+<!--                <label for="title">Title</label>-->
+<!--                <div class="alert-message" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title Error</div>-->
+<!--                <input type="text" id="title" th:field="*{title}" placeholder="Enter post title"/>-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <label for="body">Content</label>-->
+<!--                <div class="alert-message" th:if="${#fields.hasErrors('body')}" th:errors="*{body}">Body Error</div>-->
+<!--                <textarea id="body" th:field="*{body}" placeholder="Write something valuable"></textarea>-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <label for="image">Upload Image</label>-->
+<!--                <input type="file" name="image" id="image"/>-->
+<!--            </div>-->
+<!--            <div class="form-actions">-->
+<!--                <button class="btn btn-submit" type="submit">Publish Post</button>-->
+<!--                <div th:if="${post.id}">-->
+<!--                    <a th:href="@{'/deletePost/{id}'(id=${post.id})}">-->
+<!--                        <button class="btn btn-delete" type="button">Delete Post</button>-->
+<!--                    </a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </form>-->
+<!--    </div>-->
+<!--    <script>-->
+<!--        CKEDITOR.replace('body');-->
+<!--    </script>-->
+<!--</div>-->
+
+<!--<footer th:replace="/fragments/footer :: footer"></footer>-->
+
+<!--</body>-->
+<!--</html>-->
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="/fragments/head :: head"></head>
+<head th:replace="/fragments/head :: head">
+    <!-- CKEditor CDN -->
+    <script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>
+</head>
 <body>
 
 <div th:replace="/fragments/header :: header"></div>
+<div class="content-wrapper">
 
-<div class="container-post">
-    <form class="form-log" action="#"
-          th:action="@{'/createNewPost'}"
-          th:object="${post}"
-          method="post" enctype="multipart/form-data">
-        <h2>Write new blog post</h2>
-        <div>
-            <label>
-                <div class="alert-red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title Error</div>
-                <input type="text" th:field="*{title}" placeholder="Title"/>
-            </label>
-        </div>
-        <div>
-            <label>
-                <div class="alert-red" th:if="${#fields.hasErrors('body')}" th:errors="*{body}">Body Error</div>
-                <textarea th:field="*{body}" placeholder="Write something valuable"></textarea>
-            </label>
-        </div>
-        <div>
-            <label for="image">Upload Image:</label>
-            <input type="file" name="image" id="image"/>
-        </div>
-        <div class="float-left">
-            <button class="green-btn" type="submit">Send</button>
-        </div>
-        <div class="float-right" th:if="${post.id}">
-            <a th:href="@{'/deletePost/{id}'(id=${post.id})}">
-                <button class="green-btn red-btn" type="button">Delete Post</button>
-            </a>
-        </div>
-    </form>
-    
+    <div class="post-container">
+        <form class="post-form" action="#"
+              th:action="@{'/createNewPost'}"
+              th:object="${post}"
+              method="post" enctype="multipart/form-data">
+            <h2>Create New Blog Post</h2>
+            <div class="form-group">
+                <label for="title">Title</label>
+                <div class="alert-message" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title Error</div>
+                <input type="text" id="title" th:field="*{title}" placeholder="Enter post title"/>
+            </div>
+            <div class="form-group">
+                <label for="body">Content</label>
+                <div class="alert-message" th:if="${#fields.hasErrors('body')}" th:errors="*{body}">Body Error</div>
+                <textarea id="body" th:field="*{body}" placeholder="Write something valuable"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="image">Upload Image</label>
+                <input type="file" name="image" id="image"/>
+            </div>
+            <div class="form-actions">
+                <button class="btn btn-submit" type="submit">Publish Post</button>
+                <div th:if="${post.id}">
+                    <a th:href="@{'/deletePost/{id}'(id=${post.id})}">
+                        <button class="btn btn-delete" type="button">Delete Post</button>
+                    </a>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
 
+<!-- Initialize CKEditor -->
+<script>
+    CKEDITOR.replace('body');
+</script>
 
 <footer th:replace="/fragments/footer :: footer"></footer>
 
 </body>
 </html>
+
