--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -53,7 +53,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="/fragments/head :: head">
+<head th:replace="fragments/head :: head">
 <!--    <style>-->
 <!--        body {-->
 <!--            font-family: sans-serif;-->
@@ -73,7 +73,7 @@
 </head>
 <body>
 
-<div th:replace="/fragments/header :: header"></div>
+<div th:replace="fragments/header :: header"></div>
 
 <div class="content-wrapper blog-post-out">
 
@@ -116,7 +116,7 @@
     </div>
 </div>
 
-<footer th:replace="/fragments/footer :: footer"></footer>
+<footer th:replace="fragments/footer :: footer"></footer>
     <!-- JavaScript to handle the download -->
 <!--    <script>-->
 <!--        function downloadPost() {-->
