--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -131,14 +131,14 @@
 <!--    </html>-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments/head :: head">
+<head th:replace="fragments/head :: head">
     <link rel="stylesheet" href="styles.css">
     <!-- Include Font Awesome for icons (optional) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-<div th:replace="/fragments/header :: header"></div>
+<div th:replace="fragments/header :: header"></div>
 <div class="content-wrapper">
     <div class="unique-login-container-out">
         <div class="unique-login-container">
@@ -182,7 +182,7 @@
 </div>
 </div>
 
-<footer th:replace="/fragments/footer :: footer"></footer>
+<footer th:replace="fragments/footer :: footer"></footer>
 
 </body>
 </html>
