--- a/src/main/resources/templates/commentForm.html
+++ b/src/main/resources/templates/commentForm.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments/head :: head"></head>
+<head th:replace="fragments/head :: head"></head>
 <body>
 
-<div th:replace="/fragments/header :: header"></div>
+<div th:replace="fragments/header :: header"></div>
 <div class="content-wrapper">
     <div class="comment-container">
         <h2>Leave a Comment</h2>
@@ -24,7 +24,7 @@
         </form>
     </div>
 </div>
-<footer th:replace="/fragments/footer :: footer"></footer>
+<footer th:replace="fragments/footer :: footer"></footer>
 
 </body>
 </html>
